[package]
name = "rusty-s3fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.12.0"
libc = "0.2.51"
env_logger = "0.9"
clap = { version = "3.0", features = ["cargo", "derive"] }
serde = { version = "1.0.102", features = ["std", "derive"] }
log = "0.4.6"
bincode = "1.3.1"
