[package]
name = "rusty-s3fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opendal = "0.30.4"
fuser = "0.12.0"
libc = "0.2.51"
env_logger = "0.9"
clap = { version = "3.0", features = ["cargo", "derive"] }
serde = { version = "1.0.102", features = ["std", "derive"] }
log = "0.4.6"
bincode = "1.3.1"
tokio = { version = "1.27.0", features = ["full"] }
time = "0.3.0"
futures = "0.3"
async-recursion = "1.0.4"
anyhow = { version = "1.0", default-features = false }